LayoutTests/imported/w3c: Add interpolation for object-position CSS property https://bugs.webkit.org/show_bug.cgi?id=223568

Patch by Tim Nguyen <ntim.bugs@gmail.com> on 2021-03-26
Reviewed by Antoine Quint.

* web-platform-tests/css/css-images/object-position-interpolation.html: Added.

Source/WebCore:
Make the object-position CSS property animatable.
https://bugs.webkit.org/show_bug.cgi?id=223568

Patch by Tim Nguyen <ntim@apple.com> on 2021-03-26
Reviewed by Antoine Quint.

Test: imported/w3c/web-platform-tests/css/css-images/object-position-interpolation.html

* animation/CSSPropertyAnimation.cpp:
(WebCore::blendFunc):
(WebCore::canInterpolateLengthPoints):
(WebCore::CSSPropertyAnimationWrapperMap::CSSPropertyAnimationWrapperMap):

Canonical link: https://commits.webkit.org/235812@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@275104 268f45cc-cd09-0410-ab3c-d52691b4dbfc